# PyEntrez

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/pyentrez/: __init__.py  _client.py  _exceptions.py  _runner.py  _types.py
src/pyentrez/_parsers/: __init__.py  _elink.py  _fasta.py  _pmc.py  _pubmed.py  _xml.py
tests/: conftest.py  test_client.py  test_integration.py  test_parsers.py  test_runner.py
tests/fixtures/: elink_output.xml  esearch_output.xml  pubmed_article.xml
